log/build_2024-10-15_09-42-36/my_python_node/stderr.log
  File "/home/zxq/laser_ws/install/my_python_node/lib/python3.10/site-packages/my_python_node/listener.py", line 145
    thread_camera = threading.Thread(target=target=read_camera)
                                                  ^
SyntaxError: invalid syntax

